<?xml version="1.0"?>
<package format="2">
  <name>libiiwa_msgs</name>
  <version>0.1.0</version>
  <description>The libiiwa_msgs package</description>
  <maintainer email="toni.sm@example.com">Toni-SM</maintainer>
  <license>MIT</license>
  <url type="website">https://libiiwa.readthedocs.io</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
